[docs] 프로젝트 회고록, NAWA 수정

--- a/docs/essay/project-review/2019-nawa.md
+++ b/docs/essay/project-review/2019-nawa.md
@@ -13,7 +13,7 @@ summary: # 프로젝트 개요
     name: 나와
     subject: 모임 중개 서비스
   platform: # 서비스 플랫폼 @environment: 지원환경 @demo: 데모 url @github: 깃헙 url, @value: default -> n
-    environment: 데스크탑 응용 프로그램
+    environment: 웹 서비스
     demo: n
     github: https://github.com/JISU-YANG/2019_NAWA
   period: # 개발 기간 @date: 범위 @day: 기간
@@ -49,11 +49,12 @@ intro:
   thumbnail: 2019-nawa-thumb01.png, 2019-nawa-thumb02.png, 2019-nawa-thumb03.png, 2019-nawa-thumb04.png, 2019-nawa-thumb05.png
 ---
 
-
 ## 실패를 되돌아보기
 ### 역량 파악 실패
 반년의 훈련기간 동안 쌓인 데이터를 고려해서 난이도 별로 적절히 임시 배정을 했다. 그런 다음 그 팀원과 대화를 통해 담당과 데드라인이 결정되었다.
 그런데 담당자가 기능을 담당해내지 못 하거나, 데드라인 안에 해내지 못 하는 경우가 부지기수였다. 그럴때마다 PM과 PE가 호출되었고, 프로젝트 기간이 정체되었다.
+
+---
 
 ### 문화 조성 실패
 역량 파악에 실패 했더라도 만약 냉철하게 그 상황을 받아들였다면 연쇄적인 피해를 줄일 수 있었을 것이다.
@@ -64,6 +65,8 @@ intro:
 데드라인이 너무 길어지는 경우에도 다른 팀원으로 담당을 넘기는 방법이 있다. 
 당시에는 팀원이 상처 받을까봐 그러지 못 했는데, 오히려 해결해내지 못하고 팀에게 피해를 주는 것에 부담감이 컸고 굉장히 미안해하는 일이 있었다.
 
+---
+
 ### GitHub 도입 실패
 다들 GitHub를 들어는 봤지만 사용할줄 몰랐다. 그래서 이번 프로젝트에 도입 해보려고 시도했지만 테스트하는 과정에서 꼬이는 현상이 잦아 결국 포기하기로 했다. 
 그로인해 중간중간 내가 구현을 마친 기능을 일일히 찾아 공통 모듈에 합쳐가며 진행할 수 밖에 없었다.
@@ -71,12 +74,16 @@ intro:
 하지만 내가 GitHub에 대해 더 깊게 알아보고 브랜치 전략을 세울 수 있었더라면, 위의 리스크를 감수할 수 있을만큼 낮출 수 있었을 것이다.
 그렇게되면 낭비되는 시간과 여러 이슈를 사전에 줄일 수 있었을 것이다.
 
+---
+
 ### 스케일 조절 실패
 팀의 인원이 많다 보니 프로젝트 주제도 스케일이 작다는 이유로 여러번 변경되었다.
 그러다가 통과된 주제가 '모임 중개 서비스'였다. 어렵게 정해졌다보니 스케일이 너무 커지지도 작지도 않게만 신경을 써서 기획을 들어갔다.
 이후 실제로 어떻게 진행되고 있는지와 관계없이 기획은 금단의 영역이 된 것이다.
 WBS의 일정과 다르게, 기간 지연과 기술 이슈들이 터져나올때 확고하게 결정하고 팀을 설득했어야 했다.
 더 여유 있게 비중을 줄이고 난이도가 높은 포기해 스케일을 낮출 필요가 있었다.
+
+---
 
 ### 기간 배분 실패
 훈련에서 강사님의 말씀중 "현업의 절반 이상은 문서작업이다." 라는 자주 하셨다.
@@ -86,6 +93,8 @@ WBS의 일정과 다르게, 기간 지연과 기술 이슈들이 터져나올때
 
 [소프트웨어 디자인과 기획에 30%, 실제 개발에 50%, 테스트에 20%를 투여하는 것을 프로젝트의 기준](https://www.theteams.kr/teams/392/post/64327)으로 세우는 원칙을 정한 분의 글을 보았다.
 다음에는 기간을 이런 식으로 배분해 조금 더 체계적인 프로젝트 진행을 해보고 싶다. 
+
+---
 
 ## 마무리
 취업을 위해서 훈련에 참여했다. 그 과정을 마무리하는 프로젝트의 목적은 당연히 취업을 위한 포트폴리오이다.
