[docs] 프로젝트 회고록, 기술 스택 수정

--- a/docs/essay/project-review/2019-nawa.md
+++ b/docs/essay/project-review/2019-nawa.md
@@ -27,7 +27,7 @@ intro:
     language: JSP, Java, Javascript, HTML/CSS, SQL
     server: Tomcat
     framework: Spring Framework, MyBatis
-    api_and_library: Google Login API, kakao Login API, kakao Maps API, Jackson, commons-fileupload, commons-io, javax.mail, Spring Social, Spring Scheduler, Spring Security, Spring-AOP, Gson
+    api_and_library: Google Login API, kakao Login API, kakao Maps API, Maven, Jackson, commons-fileupload, commons-io, javax.mail, Spring Social, Spring Scheduler, Spring Security, Spring-AOP, Gson
     database: MariaDB
     ide: Eclipse
   role:
