[feat] 프로젝트 회고록, 포스트 전용 템플릿 제작
- 기존 TOC 템플릿 제거
- GNB 대신 해당 포스트의 링크된 헤드라인 목차 출력
- 프로젝트 회고록 자동화 템플릿 제작

--- a/docs/essay/project-review/2019-nawa.md
+++ b/docs/essay/project-review/2019-nawa.md
@@ -1,7 +1,7 @@
 ---
 # 페이지 셋팅
-layout: project
-title: 모임 중개 서비스
+layout: project_review
+title: 소모임 중개 서비스
 parent: 프로젝트 회고록
 grand_parent: Essay
 nav_order: 1
@@ -11,7 +11,7 @@ toc: true
 summary: # 프로젝트 개요
   service: # 서비스 정보 @name: 이름 @subject: 주제
     name: 나와
-    subject: 모임 중개 서비스
+    subject: 소모임 중개 서비스
   platform: # 서비스 플랫폼 @environment: 지원환경 @demo: 데모 url @github: 깃헙 url, @value: default -> n
     environment: 웹 서비스
     demo: n
