--- a/docs/archive/note/shorts/algorithm/문자열-내-마음대로-정렬하기.md
+++ b/docs/archive/note/shorts/algorithm/문자열-내-마음대로-정렬하기.md
@@ -13,11 +13,13 @@ reference:
     content-link: "https://school.programmers.co.kr/learn/courses/30/lessons/12915"
 ---
 
-> **문제 설명:**
+### 문제
+
+> **문제 설명**
 > 
 > 문자열로 구성된 리스트 `strings`와 정수 `n`이 주어졌을 때, 각 문자열의 인덱스 `n`번째 글자를 기준으로 오름차순 정렬하려 합니다. 예를 들어, `strings`가 `["sun", "bed", "car"]`이고 `n`이 1이라면, 각 단어의 인덱스 1의 문자 "u", "e", "a"로 `strings`를 정렬합니다.
 >
-> **제한 조건:**
+> **제한 조건**
 >
 > - `strings`는 길이 1 이상 50 이하인 배열입니다.
 > - `strings`의 원소는 소문자 알파벳으로 이루어져 있습니다.
@@ -25,7 +27,7 @@ reference:
 > - 모든 `strings`의 원소의 길이는 `n`보다 큽니다.
 > - 인덱스 `n`의 문자가 같은 문자열이 여러 개일 경우, 사전순으로 앞선 문자열이 앞쪽에 위치합니다.
 >
-> **입출력 예:**
+> **입출력 예**
 >
 > | strings              | n   | return             |
 > | -------------------- | --- | ------------------ |
