--- a/docs/archive/note/shorts/algorithm/점-찍기.md
+++ b/docs/archive/note/shorts/algorithm/점-찍기.md
@@ -13,7 +13,9 @@ reference:
     content-link: "https://school.programmers.co.kr/learn/courses/30/lessons/140107"
 ---
 
-> **문제설명:**
+### 문제
+
+> **문제 설명**
 > 
 > 좌표평면을 좋아하는 진수는 x축과 y축이 직교하는 2차원 좌표평면에 점을 찍으면서 놀고 있습니다. 진수는 두 양의 정수 `k`, `d`가 주어질 때 다음과 같이 점을 찍으려 합니다.
 >
@@ -23,11 +25,11 @@ reference:
 > 예를 들어, `k`가 2, `d`가 4인 경우에는 (0, 0), (0, 2), (0, 4), (2, 0), (2, 2), (4, 0) 위치에 점을 찍어 총 6개의 점을 찍습니다.
 > 정수 `k`와 원점과의 거리를 나타내는 정수 `d`가 주어졌을 때, 점이 총 몇 개 찍히는지 `return`하는 `solution` 함수를 완성하세요.
 > 
-> **제한사항:**
+> **제한 사항**
 > - 1 ≤ `k` ≤ 1,000,000
 > - 1 ≤ `d` ≤ 1,000,000
 >
-> **입출력 예:**
+> **입출력 예**
 > 
 > | k | d | result |
 > |---|---|--------|
