--- a/docs/essay/project-review/2019-nawa.md
+++ b/docs/essay/project-review/2019-nawa.md
@@ -49,57 +49,62 @@ intro:
   thumbnail: 2019-nawa-thumb01.png, 2019-nawa-thumb02.png, 2019-nawa-thumb03.png, 2019-nawa-thumb04.png, 2019-nawa-thumb05.png
 ---
 
-## 실패를 되돌아보기
-### 역량 파악 실패
-반년의 훈련기간 동안 쌓인 데이터를 고려해서 난이도 별로 적절히 임시 배정을 했다. 그런 다음 그 팀원과 대화를 통해 담당과 데드라인이 결정되었다.
-그런데 담당자가 기능을 담당해내지 못 하거나, 데드라인 안에 해내지 못 하는 경우가 부지기수였다. 그럴때마다 PM과 PE가 호출되었고, 프로젝트 기간이 정체되었다.
+## 어려움과 극복
+프로젝트의 초기에는 인원 수에 맞춘 큰 규모의 스케일이 요구되었고, 
+팀장으로서 팀원들의 역량을 파악하여 각각의 업무를 배정하려 했다. 
+반년의 훈련 데이터를 기반으로 난이도에 따라 업무를 분배했지만, 
+예상과 달리 여러 팀원이 기능 구현이나 데드라인 준수에 어려움을 겪었다. 
+이로 인해 PM과 PE의 지속적인 개입이 필요했고 프로젝트 진행이 지체되기 시작했다. 
+WBS에 명시된 일정이 반복적으로 지켜지지 않을 때, 결정적인 조치가 필요했다.
+다시 스케일을 조정하고, 복잡한 기능들의 수준을 낮춰 진행해야 했었다.
+하지만 적절한 대응이 이루어지지 않아, 프로젝트는 여러 차례의 기간 연장 끝에 결국 종료되었다.
 
 ---
 
+### 깃허브 관련 이야기
+
+팀원 모두 GitHub에 대한 기본적인 지식만 가지고 있었고, 실질적인 사용 능력은 부족했다. 
+프로젝트 초기에 GitHub 도입을 시도했지만, 충돌이 잦아 혼란스러워 했다. 
+결국, 도입을 포기하고 각자의 작업물을 직접 찾아서 통합해야 했다. 
+병합 후에도 자주 오류가 발생했다. 
+만약 GitHub를 더 깊게 이해하고, 적절한 브랜치 전략을 세웠다면, 
+이런 문제들을 극복할 수 있었을 것 같아 아쉬움이 남는다.
+
+---
+
+## 배운 점
+
+### 발전한 기술적 역량
+이번 프로젝트에서는 MyBatis를 활용해 데이터베이스 쿼리를 처음 제어하며, 
+Spring Framework로 서버와 화면 사이의 컨트롤러를 효율적으로 연결했다. 
+프레임워크와 라이브러리를 사용함으로써 로직 개발의 방향성이 다양해짐을 느꼈다.
+파일 업로드, 커스텀 에디터 사용, 외부 API와의 연동, 프로젝트의 배포 과정 등
+이전에 경험하지 못한 기술적인 요소들은 예상보다 복잡했지만, 이 과정에서 많은 학습 기회를 얻은 것 같다.
+
+---
+
+### 문서
+훈련 과정에서 문서 작업의 중요성을 깨닫게 되었다. 
+프로젝트에서 직접 시도해보면서 10가지의 다양한 문서를 작성하였다.
+그 과정에서 상당한 시간을 소요하였지만, 프로젝트 진행에서 많은 혼란과 오해를 미리 방지하는데 
+큰 도움이 되어 직접 체감할 수 있었다.
+
+---
+
+## 결과 및 성과
 ### 문화 조성 실패
-역량 파악에 실패 했더라도 만약 냉철하게 그 상황을 받아들였다면 연쇄적인 피해를 줄일 수 있었을 것이다.
-
-도움을 요청하거나 의견을 물어보는 시간을 일정한 주기로 정한 다음, 팀원이 문제 상황에 처했을때 오히려 혼자 난항에 부딪히며 해쳐나가는 경험을 하게하는 것이다.
-그렇게 되면 PM과 PE의 의존도를 낮추면서 팀원 스스로의 성장과 함께 PM, PE도 담당 업무에 집중이 수월했을 것이다.
-
-데드라인이 너무 길어지는 경우에도 다른 팀원으로 담당을 넘기는 방법이 있다. 
-당시에는 팀원이 상처 받을까봐 그러지 못 했는데, 오히려 해결해내지 못하고 팀에게 피해를 주는 것에 부담감이 컸고 굉장히 미안해하는 일이 있었다.
-
----
-
-### GitHub 도입 실패
-다들 GitHub를 들어는 봤지만 사용할줄 몰랐다. 그래서 이번 프로젝트에 도입 해보려고 시도했지만 테스트하는 과정에서 꼬이는 현상이 잦아 결국 포기하기로 했다. 
-그로인해 중간중간 내가 구현을 마친 기능을 일일히 찾아 공통 모듈에 합쳐가며 진행할 수 밖에 없었다.
-병합한 이후에 갑자기 작동이 안 되는 경우도 빈번했다.
-하지만 내가 GitHub에 대해 더 깊게 알아보고 브랜치 전략을 세울 수 있었더라면, 위의 리스크를 감수할 수 있을만큼 낮출 수 있었을 것이다.
-그렇게되면 낭비되는 시간과 여러 이슈를 사전에 줄일 수 있었을 것이다.
-
----
-
-### 스케일 조절 실패
-팀의 인원이 많다 보니 프로젝트 주제도 스케일이 작다는 이유로 여러번 변경되었다.
-그러다가 통과된 주제가 '모임 중개 서비스'였다. 어렵게 정해졌다보니 스케일이 너무 커지지도 작지도 않게만 신경을 써서 기획을 들어갔다.
-이후 실제로 어떻게 진행되고 있는지와 관계없이 기획은 금단의 영역이 된 것이다.
-WBS의 일정과 다르게, 기간 지연과 기술 이슈들이 터져나올때 확고하게 결정하고 팀을 설득했어야 했다.
-더 여유 있게 비중을 줄이고 난이도가 높은 포기해 스케일을 낮출 필요가 있었다.
-
----
-
-### 기간 배분 실패
-훈련에서 강사님의 말씀중 "현업의 절반 이상은 문서작업이다." 라는 자주 하셨다.
-그래서 다양한 문서들을 제대로 경험해보는 것을 중요하게 생각했었다.
-그렇게 신경을 많이 쓴 만큼 이와 관련해서는 변동사항도 많이 생기지 않았다.
-하지만 결과적으로 너무 많은 시간을 소요했고 정작 중요한 개발을 끝내 마무리 못했다.
-
-[소프트웨어 디자인과 기획에 30%, 실제 개발에 50%, 테스트에 20%를 투여하는 것을 프로젝트의 기준](https://www.theteams.kr/teams/392/post/64327)으로 세우는 원칙을 정한 분의 글을 보았다.
-다음에는 기간을 이런 식으로 배분해 조금 더 체계적인 프로젝트 진행을 해보고 싶다. 
+프로젝트를 진행하면서 팀원들의 역량 파악에 실패했던 것은 큰 아쉬움으로 남는다. 
+더 일찍 정확하게 이해했다면 여러 문제를 미리 방지할 수 있었을 텐데, 
+특히 문제가 생길 때마다 PM과 PE의 지속적인 개입이 필요했던 점이 부담스러웠다. 
+이런 문제들을 방지하기 위해 정기적으로 팀원 간의 의견 교환 및 문제 해결 시간을 가지는 것이 좋았을 것이다. 
+더불어 일정 지연이 발생할 때, 업무를 다른 팀원에게 위임하는 방안을 고려하지 않았던 것도 아쉽다. 
+팀원 간의 감정을 우려하여 이러한 결정을 피했지만, 이로 인해 모두에게 추가적인 부담이 가해진 것 같아 미안하다.
 
 ---
 
 ## 마무리
-취업을 위해서 훈련에 참여했다. 그 과정을 마무리하는 프로젝트의 목적은 당연히 취업을 위한 포트폴리오이다.
-그 목표를 위해 별 다른 제약 없이 혼자 프로젝트를 진행하는 방법도 있었지만, 완성도 보다 협업의 경험이 더 값지겠다는 생각이 들었다.
-그래서 천차만별의 팀원들과 도전을 하게 되었지만 많은 실패를 겪고 말았다. 후반에는 큰 진전없이 반복적으로 프로젝트 기한이 무기한 연장되는 사태가 발생했다.
-모두가 취업이 급했고, 한, 두명씩 취업을 하고 있던 상황이라 서비스 미완성으로 프로젝트를 종료하는 결정을 하게 되었다.
-이번 프로젝트에서 팀원들이 원망스러울 떄도 있었지만 "프로젝트의 실패는 PM의 책임이다."라는 말이 있듯이 나에게도 부족함이 많았다.
-["프로젝트는 실패였지만, 커리어의 실패는 아니었다."](https://www.wanted.co.kr/community/post/5849)라는 말로 위로하며 이번 실패를 경험으로 남기기 위해 원인을 되돌아 보았다.
+KIT에서의 6개월 간 국가기간전략산업직종훈련은 나에게 큰 도전의 시간이었다. 
+마지막 프로젝트는 그것을 증명하는 역할이기에 많은 기대와 부담이 가득했다.
+팀원들과 협업하는 과정에서 기술적인 장벽, 의사소통의 어려움, 개발 스타일 간의 차이로 여러 번의 위기를 겪었다.
+무기한 연장되어 아쉽게도 결국 완성하지 못한 프로젝트였지만, 이 경험에서 얻은 깨달음과 겪은 어려움은 귀중한 경험으로 남았다.
+강의실에서부터 카페, 임대 회의실, 소호 사무실까지 많은 장소에서 열심히 노력하며 열정을 품고 진행한 그 시간들은 소중한 추억이 되었다.
