[fix] UTF 인코딩 이슈
- 디렉토리 및 메타 데이터 수정

--- a/docs/archive/learning-notes/study/spring-beginner/01-학습-준비하기.md
+++ b/docs/archive/learning-notes/study/spring-beginner/01-학습-준비하기.md
@@ -1,15 +1,15 @@
 ---
 layout: note_series
 parent: Learning Notes
-study: Spring 입문
-chapter: 8
-title: Spring Data JPA
+study: Spring Beginner
+chapter: 1
+title: 학습 준비하기
 toc: true
 reference:
   1: 
     author: Eric 튜터, Jinny 튜터, Jen 튜터
     year: 2024
     platform: 스파르타코딩클럽
-    content: Spring Master 2주차
+    content: Spring Master 1주차
     content-link: https://online.spartacodingclub.kr/
 ---
