[docs] Study Notes 수정

--- a/docs/archive/learning-notes/study/spring-beginner/01-학습-준비하기.md
+++ b/docs/archive/learning-notes/study/spring-beginner/01-학습-준비하기.md
@@ -18,9 +18,8 @@ reference:
 ### 프로젝트 생성 및 설정
 
 Spring Web과 Lombok을 포함한 기본 Dependencies를 추가해서 프로젝트를 만든다.
-이후 프로젝트 설정에서 import 관련 옵션을 켜준다.
+이후 프로젝트 설정에서 import 관련 옵션을 켜준다. import 설정(설정 -> 에디터 -> 일반 -> 자동 가져오기)에서 다음 두 가지를 체크한다.
 
-import 설정: 설정 -> 에디터 -> 일반 -> 자동 가져오기에서 다음 두 가지를 체크한다.
 1. 모호하지 않은 import 문 즉시 추가
 2. import 문 즉시 최적화
 
@@ -32,10 +31,13 @@ import 설정: 설정 -> 에디터 -> 일반 -> 자동 가져오기에서 다음
 Gradle은 빌드 자동화 시스템으로, Java 소스 코드를 실행 가능한 결과물로 바꿔준다.
 Gradle 탭에서 `Tasks -> build -> build`를 실행하거나 `build.gradle` 파일을 직접 실행해 프로젝트를 빌드할 수 있다. 빌드 결과는 `프로젝트/build/libs` 폴더에 `.jar` 파일로 만들어진다.
 
-**build.gradle** 파일은 소스 코드 빌드와 라이브러리의 요청을 관리하며 Groovy, Kotlin 언어로 작성된다.
+---
+
+### build.gradle
+파일은 소스 코드 빌드와 라이브러리의 요청을 관리하며 Groovy, Kotlin 언어로 작성된다.
 필요한 라이브러리는 `dependencies`에 추가하면 Maven repository에서 다운로드된다.
 
----
+<br>
 
 ## 서버와 네트워크
 ### 네트워크
@@ -50,8 +52,10 @@ Gradle 탭에서 `Tasks -> build -> build`를 실행하거나 `build.gradle` 파
 웹 서버는 브라우저의 HTTP 요청을 받아 처리하고, 결과를 HTTP 응답으로 돌려준다. 
 기본적으로 GET 메소드를 사용해 리소스를 요청한다.
 
-- APACHE 웹서버: 브라우저가 요청한 페이지를 처리하고, HTML 같은 문서를 돌려주는 역할을 한다. 동적인 콘텐츠는 WAS로 넘겨 처리하고, 정적인 콘텐츠는 직접 제공한다.
-- APACHE TOMCAT: 웹서버와 WAS 기능을 합친 서버로, Web Container(Servlet)를 통해 작동하며, 기본 포트는 8080이다.
+- APACHE 웹서버  
+  브라우저가 요청한 페이지를 처리하고, HTML 같은 문서를 돌려주는 역할을 한다. 동적인 콘텐츠는 WAS로 넘겨 처리하고, 정적인 콘텐츠는 직접 제공한다.
+- APACHE TOMCAT  
+  웹서버와 WAS 기능을 합친 서버로, Web Container(Servlet)를 통해 작동하며, 기본 포트는 8080이다.
 
 ---
 
@@ -77,7 +81,7 @@ HTTP는 데이터를 주고받는 통신 규약이다.
 POSTMAN은 API를 빠르고 쉽게 개발할 수 있게 도와주는 프로그램이다. 
 API 테이블을 작성해 API 이름, 메소드, URL, 설명 등을 정리하면 협업할 때 유용하다.
 
----
+<br>
 
 ## Spring
 ### Spring Framework와 Spring Boot
