[docs] Study Notes 추가

--- a/docs/archive/learning-notes/study/spring-beginner/03-메모장.md
+++ b/docs/archive/learning-notes/study/spring-beginner/03-메모장.md
@@ -13,3 +13,8 @@ reference:
     content: Spring Master 1주차
     content-link: https://online.spartacodingclub.kr/
 ---
+
+## 실습자료
+### GitHub
+- [Creat, Read 구현](https://github.com/JISU-YANG/study-spring-memo/commit/a19015c41c6b43f866bda2d62a63bc3c7c811bcf)
+- [Update, Delete 구현](https://github.com/JISU-YANG/study-spring-memo/commit/fd12a4337d6dd1c95c748448e2c48401156a0ae6)
