[docs] Study Notes 수정
- 참조 항목이 더 정확한 내용으로 수정되었습니다.

--- a/docs/archive/learning-notes/study/spring-beginner/01-학습-준비하기.md
+++ b/docs/archive/learning-notes/study/spring-beginner/01-학습-준비하기.md
@@ -7,11 +7,11 @@ title: 학습 준비하기
 toc: true
 reference:
   1: 
-    author: Eric 튜터, Jinny 튜터, Jen 튜터
-    year: 2024
+    author: 최원빈
+    year: 2023
     platform: 스파르타코딩클럽
-    content: Spring Master 1주차
-    content-link: https://online.spartacodingclub.kr/
+    content: 웹개발의 봄 Spring
+    content-link: https://spartacodingclub.kr/online/spring_v2
 ---
 
 ## 프로젝트 셋팅
