--- a/docs/archive/learning-notes/study/spring-intermediate/03-사용자-관리하기.md
+++ b/docs/archive/learning-notes/study/spring-intermediate/03-사용자-관리하기.md
@@ -6,12 +6,12 @@ chapter: 3
 title: 학습 준비하기
 toc: true
 reference:
-  1: 
-    author: Eric 튜터, Jinny 튜터, Jen 튜터
-    year: 2024
+  1:
+    author: 최원빈
+    year: 2023
     platform: 스파르타코딩클럽
-    content: Spring Master 3주차
-    content-link: https://online.spartacodingclub.kr/
+    content: 웹개발의 봄 Spring
+    content-link: https://spartacodingclub.kr/online/spring_v2
 ---
 
 ### 필터
