[docs] Study Notes 수정
- 메타데이터 미기재 및 오기재 수정

--- a/docs/archive/learning-notes/study/spring-intermediate/02-인증과-인가.md
+++ b/docs/archive/learning-notes/study/spring-intermediate/02-인증과-인가.md
@@ -1,9 +1,9 @@
 ---
 layout: note_series
 parent: Learning Notes
-study: Spring intermediate
+study: Spring Intermediate
 chapter: 2
-title: 학습 준비하기
+title: 인증과 인가
 toc: true
 reference:
   1:
