--- a/docs/archive/learning-notes/study/spring-intermediate/03-사용자-관리하기.md
+++ b/docs/archive/learning-notes/study/spring-intermediate/03-사용자-관리하기.md
@@ -1,9 +1,9 @@
 ---
 layout: note_series
 parent: Learning Notes
-study: Spring intermediate
+study: Spring Intermediate
 chapter: 3
-title: 학습 준비하기
+title: 사용자 관리하기
 toc: true
 reference:
   1:
@@ -22,10 +22,14 @@ Spring Bean으로 등록된 필터는 **@Order** 어노테이션이나 **Ordered
 - `@Order(1)`: 필터의 순서를 지정한다.
 - `chain.doFilter(request, response);`: 요청과 응답을 다음 필터로 전달한다.
 
+---
+
 ### Spring Security 프레임워크
 Spring에서는 모든 요청이 **DispatcherServlet**을 통과한 후 각 요청을 처리할 컨트롤러로 전달된다.  
 이때 모든 요청에 대해 공통적으로 처리해야 할 작업이 필요할 경우 **DispatcherServlet** 이전에 **필터** 단계가 사용된다.  
 Spring Security는 **FilterChainProxy**를 통해 보안 관련 로직을 구현한다.
+
+---
 
 ### SecurityContextHolder
 **SecurityContextHolder**는 보안 정보를 저장하고 관리하는 객체이며, 그 내부에는 **SecurityContext**와 **Authentication** 객체가 있다.
