--- a/docs/archive/learning-notes/study/spring-intermediate/04-데이터-검증하기.md
+++ b/docs/archive/learning-notes/study/spring-intermediate/04-데이터-검증하기.md
@@ -1,9 +1,9 @@
 ---
 layout: note_series
 parent: Learning Notes
-study: Spring intermediate
+study: Spring Intermediate
 chapter: 4
-title: 학습 준비하기
+title: 데이터 검증하기
 toc: true
 reference:
   1:
