[docs] notes 수정
- 제목 변경

--- a/docs/archive/learning-notes/study/sparta-til/02-20241105_트러블-슈팅-및-테스트-코드.md
+++ b/docs/archive/learning-notes/study/sparta-til/02-20241105_트러블-슈팅-및-테스트-코드.md
@@ -3,7 +3,7 @@ layout: note_series
 parent: Learning Notes
 study: Sparta Til
 chapter: 2
-title: 20241105_트러블 슈팅 테스트 코드
+title: 20241105_트러블 슈팅 및 테스트 코드
 toc: true
 ---
 
