--- a/docs/archive/learning-notes/study/sparta-til/03-20241106_sa-문서-작성-및-회고.md
+++ b/docs/archive/learning-notes/study/sparta-til/03-20241106_sa-문서-작성-및-회고.md
@@ -3,7 +3,7 @@ layout: note_series
 parent: Learning Notes
 study: Sparta Til
 chapter: 3
-title: 20241106_프로젝트 문서 작성 일일 회고
+title: 20241106_Sa 문서 작성 및 회고
 toc: true
 ---
 
