[docs] notes 수정

--- a/docs/archive/learning-notes/study/sparta-til/06-20241111_피드백-및-코드리뷰.md
+++ b/docs/archive/learning-notes/study/sparta-til/06-20241111_피드백-및-코드리뷰.md
@@ -4,6 +4,7 @@ parent: Learning Notes
 study: Sparta Til
 chapter: 6
 title: 20241111_피드백 및 코드리뷰
+toc: true
 ---
 
 ### 잡담 TIME
@@ -12,6 +13,8 @@ title: 20241111_피드백 및 코드리뷰
 예상대로 어색함을 많이 느낄 것 같아 부담스러웠지만, 어쩔 수 없이 참여할 수 밖에 없었다.
 
 다행히 우리 조는 분위기가 좋았고 대화도 자연스럽게 이어졌다. 
+
+> 대화 주제
 - 각자의 프로젝트 진행 상황
 - 사전 강의에 대한 느낌
 - 전공과 교육 배경
@@ -40,7 +43,7 @@ title: 20241111_피드백 및 코드리뷰
 
 ## 피드백
 ### 튜터님 피드백
-**엔티티 매핑 담당자**. 
+**엔티티 매핑 담당자**  
 엔티티 매핑 담당으로 결정된 직후, 튜터님께 진행 상황을 공유드렸고, 한 사람이 모든 엔티티 매핑을 맡게 된 것에 대해 의아해하셨다. 
 튜터님은 각자가 나눠서 경험해보는 것도 좋지만, 
 일관성과 N:1 관계 매핑, Auditing 등을 관리하는 측면에서는 한 사람이 맡아 진행하는 것이 훨씬 빠를 수 있다고 하셨다.
