[docs] notes 추가

--- a/docs/archive/learning-notes/study/sparta-til/09-20241114_auth-및-코드-리뷰-회고.md
+++ b/docs/archive/learning-notes/study/sparta-til/09-20241114_auth-및-코드-리뷰-회고.md
@@ -56,17 +56,23 @@ git commit --amend
 
 ---
 
-### PR 과정에서 사용한 Git 명령어들
-```bash
-// 원격 develop 브랜치를 기준으로 로컬에 기능 브랜치 생성하기
-git checkout -b {브랜치명} upstream/develop
+### 긴급 수정 작업을 위한 Git 명령어 순서
+```Bash
+# 현재 작업 중인 파일을 스태시하기
+git stash
 
-// 브랜치 이름 바꾸기
-git branch -m {새로운 브랜치 이름}
+# 새로운 브랜치를 생성하고 해당 브랜치로 체크아웃하기
+git checkout -b {새로운-브랜치-이름}
 
-// 브랜치 삭제하기
-git branch -D {로컬 브랜치 이름}
+# 수정 작업 완료 후 변경 사항 커밋하기
+git add .
+git commit -m "긴급 수정 작업"
 
-// 브랜치를 원격으로 푸시하기
-git push origin {브랜치명}
+# 브랜치를 원격 저장소에 푸시하기 (필요한 경우)
+git push origin {새로운-브랜치-이름}
+
+# 기존 작업 복구를 위해 스태시를 적용하기 (작업 브랜치로 돌아가서)
+git checkout {원래-작업-브랜치}  # 원래 작업하던 브랜치로 돌아가기
+git stash pop                     # 스태시에서 복구하기
+
 ```
