[docs] notes 수정

--- a/docs/archive/learning-notes/study/sparta-til/09-20241114_auth-및-코드-리뷰-회고.md
+++ b/docs/archive/learning-notes/study/sparta-til/09-20241114_auth-및-코드-리뷰-회고.md
@@ -46,6 +46,7 @@ toc: true
 
 ## 오늘 자주 사용한 Git 명령어들
 ### 푸시하지 않은 상태에서 이전 커밋에 합치기
+
 ```bash
 // 스테이지에 Add하기
 git add {파일의 절대경로}
@@ -57,7 +58,8 @@ git commit --amend
 ---
 
 ### 긴급 수정 작업을 위한 Git 명령어 순서
-```Bash
+
+```bash
 # 현재 작업 중인 파일을 스태시하기
 git stash
 
