[docs] notes 추가

--- a/docs/archive/learning-notes/study/sparta-til/21-20241130_세션과-캐시.md
+++ b/docs/archive/learning-notes/study/sparta-til/21-20241130_세션과-캐시.md
@@ -54,7 +54,7 @@ public RedisSerializer<Object> springSessionDefaultRedisSerializer() {
 - **해결 방법**  
   Redis의 Sorted Set을 사용한다.
     - 인메모리 데이터 저장으로 파일 I/O 레이턴시 문제를 해소할 수 있다.
-    - 시간 복잡도: ZADD - `O(logN)`, ZRANGE - `O(log(n) + m)`
+    - 시간 복잡도: [ZADD - `O(logN)`, ZRANGE - `O(log(n) + m)`](https://bugoverdose.github.io/development/redis-zset-basics/)
     - 간단하고 효율적이다.
 
 ---
