--- a/docs/archive/learning-notes/study/sparta-til/22-20241202_프로젝트-1일차.md
+++ b/docs/archive/learning-notes/study/sparta-til/22-20241202_프로젝트-1일차.md
@@ -3,7 +3,7 @@ layout: note_series
 parent: Learning Notes
 study: Sparta Til
 chapter: 22
-title: 20241203_프로젝트 기본 도메인 구현
+title: 20241202_프로젝트 1일차
 toc: true
 ---
 
