[docs] notes 수정

--- a/docs/archive/learning-notes/study/sparta-til/37-20241218_팀-프로젝트-발표.md
+++ b/docs/archive/learning-notes/study/sparta-til/37-20241218_팀-프로젝트-발표.md
@@ -46,18 +46,17 @@ toc: true
 ### 앞으로 개선할 점
 정말 많이 속상했던 만큼 이번 경험을 계기로 어떻게 반복되지 않을 수 있나 고민을 해보았다.
 
-1. 모호한 요구사항에 대한 빠른 대응  
+1. **모호한 요구사항에 대한 빠른 대응**  
   내가 기획에 참여하지 않았으니 모호한 요구사항에 대한 불만과 오판은 당연하다. 이때 빠르게 그런 사항들에 대해 리스트업을 하고 팀의 견해와 함께 담당자(튜터님)을 찾아가야 겠다.
 
-2. 추가 개발 요소의 우선순위 결정  
+2. **추가 개발 요소의 우선순위 결정**  
   개발 기간이 매우 짧은 만큼 요구사항 이외에 욕심이 나는 부분은 공용 테이블을 만들어 중요도와 난이도를 설정하고, 이중으로 시간이 소요되는 것처럼 느껴지더라도 필수 기능 개발이 끝나고 리팩토링, 고도화 하는 기간에 진행해야겠다.
 
-3. 트러블 슈팅 습관화
+3. **트러블 슈팅 습관화**  
   팀 내에 문제상황 해결에 관한 부분과 특이사항을 최소한 데일리 스크럼 스크립트에 반영할 수 있도록 제안해야겠다.
 
-4. 일정 관리의 중요성
+4. **일정 관리의 중요성**  
   프로젝트 초기에 일정 관리 체계를 확실히 잡고, 스프링(대처) 기간을 포함한 스프린트 기간을 잘 배분하여 설정하고 코드 프리징 날짜를 명확하게 설정해야겠다.
 
-5. 팀 프로젝트의 우선순위 명확화
+5. **팀 프로젝트의 우선순위 명확화**  
   해당 팀 프로젝트에서 제일 중요한 이 무엇인지 기준을 명확히 세워 리마인드하여, 불필요한 고민과 작업으로 낭비되는 시간을 줄여야겠다.
-
