[docs] notes 작성

--- a/docs/archive/learning-notes/study/sparta-til/46-20250101_최종-프로젝트-5일차-slack-api-연동.md
+++ b/docs/archive/learning-notes/study/sparta-til/46-20250101_최종-프로젝트-5일차-slack-api-연동.md
@@ -120,3 +120,10 @@ Config 클래스를 FeignClient 어노테이션에 지정해주고 테스트를 
 인코딩을 진행할때 `SpringFormEncoder`가 직렬화를 위해
 DTO를 지원하지 않아, 대신 `Map<String, String>` 사용해야 했다.
 로직을 변경한 후, Slack ID를 성공적으로 응답받을 수 있었다.
+
+---
+
+# 작업사항
+## GitHub Links
+- [[Notification] chore: 환경 설정 key 수정 및 gitignore 추가](https://github.com/BobJool/Waiting-Reservation-Service/pull/37/commits/4af052691db226893f92dc863faba644400db7cb) [#28](https://github.com/BobJool/Waiting-Reservation-Service/issues/28)
+- [[Notification] feat: Slack DM 발송 기능 구현](https://github.com/BobJool/Waiting-Reservation-Service/pull/37/commits/714f264a97c709e9a8b85c5dcd24c637002d5917) [#28](https://github.com/BobJool/Waiting-Reservation-Service/issues/28)
