[docs] notes 수정

--- a/docs/archive/learning-notes/study/sparta-til/55-20250112_최종-프로젝트-13일차-발표-준비-완료.md
+++ b/docs/archive/learning-notes/study/sparta-til/55-20250112_최종-프로젝트-13일차-발표-준비-완료.md
@@ -11,11 +11,11 @@ toc: true
 ## 에러 사항 전파
 ### docker compose 파일 에러
 
-<img class="cdn-img" id="250112_docker-compose-에러.png">
+<img class="cdn-img" id="250112-docker-compose-에러.png">
 
 Kafka-ui를 못 받아오는 문제가 있었다. 버전을 직접 설정후 해결되었고 내 환경에서만 latest를 못 불러오는 것 같았지만, 이후 다른 팀원에게도 같은 에러가 발생했다.
 
-<img class="cdn-img" id="250112_docker-compose-에러-2.png">
+<img class="cdn-img" id="250112-docker-compose-에러-2.png">
 
 
 
