[docs] notes 수정

--- a/docs/archive/learning-notes/study/sparta-til/61-20250120_최종-프로젝트-20일차-kafka-에러-핸들러와-서킷-브레이커-충돌.md
+++ b/docs/archive/learning-notes/study/sparta-til/61-20250120_최종-프로젝트-20일차-kafka-에러-핸들러와-서킷-브레이커-충돌.md
@@ -192,9 +192,9 @@ resilience4j:
 
 ```
 
-<img class="cdn-img" id="250120-resilience4j-1.png">
+<img class="cdn-img" id="250120-circuitbreaker-1.png">
 
-<img class="cdn-img" id="250120-resilience4j-2.png">
+<img class="cdn-img" id="250120-circuitbreaker-2.png">
 
 ---
 
@@ -209,6 +209,6 @@ resilience4j:
 
 ```
 
-<img class="cdn-img" id="250120-resilience4j-3.png">
+<img class="cdn-img" id="250120-circuitbreaker-3.png">
 
-<img class="cdn-img" id="250120-resilience4j-4.png">
+<img class="cdn-img" id="250120-circuitbreaker-4.png">
