[docs] notes 수정

--- a/docs/archive/learning-notes/study/sparta-til/66-20250127_최종-프로젝트-25일차-제작발표회.md
+++ b/docs/archive/learning-notes/study/sparta-til/66-20250127_최종-프로젝트-25일차-제작발표회.md
@@ -40,14 +40,13 @@ toc: true
 
 ---
 
-## 되돌아보며
-비슷한 기술 스택을 가진 개발자들과 직접 의견을 나누고 토론할 수 있는 경험이 값졌다.  
+## 마치며
+비슷한 기술 스택을 가진 개발자들과 직접 의견을 나누고 토론할 수 있는 경험이 값졌다.
 팀원 모두가 적극적으로 문제 해결에 나서며 협업한 덕분에 의미 있는 팀 프로젝트를 할 수 있었다.
 
 ---
 
 # 외부 질문
-
 ### MSA를 채택한 이유?
 서비스 주제 특성상 정말 많은 사용자의 요청이 동시에 몰리기 쉬운데
 MSA는 확장성이 뛰어나기 때문에 트래픽을 관리하기 용이하다.
@@ -107,7 +106,7 @@ MSA 배포를 위해 GitHub Actions 스크립트 작성이 어려워, EC2 내에
 ---
 
 ### 알림 채널로 슬랙을 선택한 이유?
-카카오 알림톡을 고려했으나, 비즈니스 인증이 필요해 취소했다.  
+카카오 알림톡을 고려했으나, 비즈니스 인증이 필요해 배제됐다.
 디스코드, 텔레그램 등도 검토했지만, 캠프에서 이미 사용 중인 슬랙이 접근성이 높아 선택했다.
 
 ---
