[mod] 카테고리 이름 변경

--- a/docs/experience/sparta-spring/05-20241108_sa-문서-피드백-및-api-명세서-구체화-회고.md
+++ b/docs/experience/sparta-spring/05-20241108_sa-문서-피드백-및-api-명세서-구체화-회고.md
@@ -1,6 +1,6 @@
 ---
 layout: note_series
-parent: SPARTA 부트캠프
+parent: SPARTA 일일 회고
 chapter: 5
 title: 20241108_Sa 문서 피드백 및 Api 명세서 구체화 회고
 toc: true
