--- a/docs/experience/sparta-spring/11-20241118_리팩토링과-배포-및-아쉬운-제출.md
+++ b/docs/experience/sparta-spring/11-20241118_리팩토링과-배포-및-아쉬운-제출.md
@@ -1,6 +1,6 @@
 ---
 layout: note_series
-parent: SPARTA 부트캠프
+parent: SPARTA 일일 회고
 chapter: 11
 title: 20241118_리팩토링과 배포 및 아쉬운 제출
 nav_exclude: true
