--- a/docs/experience/sparta-spring/12-20241119_프로젝트-최종-산출물-및-발표-피드백-정리.md
+++ b/docs/experience/sparta-spring/12-20241119_프로젝트-최종-산출물-및-발표-피드백-정리.md
@@ -1,6 +1,6 @@
 ---
 layout: note_series
-parent: SPARTA 부트캠프
+parent: SPARTA 일일 회고
 chapter: 12
 title: 20241119_프로젝트 최종 산출물 및 발표 피드백 정리
 toc: true
