--- a/docs/experience/sparta-spring/27-20241208_redis-사용-시-주요-문제와-최적화-전략.md
+++ b/docs/experience/sparta-spring/27-20241208_redis-사용-시-주요-문제와-최적화-전략.md
@@ -1,6 +1,6 @@
 ---
 layout: note_series
-parent: SPARTA 부트캠프
+parent: SPARTA 일일 회고
 chapter: 27
 title: 20241208_Redis 사용 시 주요 문제와 최적화 전략
 toc: true
