--- a/docs/experience/sparta-spring/43-20241227_최종-프로젝트-2일차-api-설계와-피드백.md
+++ b/docs/experience/sparta-spring/43-20241227_최종-프로젝트-2일차-api-설계와-피드백.md
@@ -1,6 +1,6 @@
 ---
 layout: note_series
-parent: SPARTA 부트캠프
+parent: SPARTA 일일 회고
 chapter: 43
 title: 20241227_최종 프로젝트 2일차 Api 설계와 피드백
 toc: true
