--- a/docs/experience/sparta-spring/44-20241230_최종-프로젝트-3일차-환경설정-및-피드백-&-특강.md
+++ b/docs/experience/sparta-spring/44-20241230_최종-프로젝트-3일차-환경설정-및-피드백-&-특강.md
@@ -1,6 +1,6 @@
 ---
 layout: note_series
-parent: SPARTA 부트캠프
+parent: SPARTA 일일 회고
 chapter: 44
 title: 20241230_최종 프로젝트 3일차 환경설정 및 피드백 & 특강
 toc: true
