--- a/docs/experience/sparta-spring/45-20241231_최종-프로젝트-4일차-sa문서-2차-피드백.md
+++ b/docs/experience/sparta-spring/45-20241231_최종-프로젝트-4일차-sa문서-2차-피드백.md
@@ -1,6 +1,6 @@
 ---
 layout: note_series
-parent: SPARTA 부트캠프
+parent: SPARTA 일일 회고
 chapter: 45
 title: 20241231_최종 프로젝트 4일차 Sa문서 2차 피드백
 toc: true
