--- a/docs/experience/sparta-spring/46-20250101_최종-프로젝트-5일차-slack-api-연동.md
+++ b/docs/experience/sparta-spring/46-20250101_최종-프로젝트-5일차-slack-api-연동.md
@@ -1,6 +1,6 @@
 ---
 layout: note_series
-parent: SPARTA 부트캠프
+parent: SPARTA 일일 회고
 chapter: 46
 title: 20250101_최종 프로젝트 5일차 Slack Api 연동
 toc: true
