--- a/docs/experience/sparta-spring/51-20250108_최종-프로젝트-10일차-카프카-메시지-수신.md
+++ b/docs/experience/sparta-spring/51-20250108_최종-프로젝트-10일차-카프카-메시지-수신.md
@@ -1,6 +1,6 @@
 ---
 layout: note_series
-parent: SPARTA 부트캠프
+parent: SPARTA 일일 회고
 chapter: 51
 title: 20250108_최종 프로젝트 10일차 카프카 메시지 수신
 toc: true
