--- a/docs/experience/sparta-spring/54-20250111_최종-프로젝트-13일차-버그-수정-및-문서-작업.md
+++ b/docs/experience/sparta-spring/54-20250111_최종-프로젝트-13일차-버그-수정-및-문서-작업.md
@@ -1,6 +1,6 @@
 ---
 layout: note_series
-parent: SPARTA 부트캠프
+parent: SPARTA 일일 회고
 chapter: 54
 title: 20250111_최종 프로젝트 13일차 버그 수정 및 문서 작업
 toc: true
