--- a/docs/experience/sparta-spring/60-20250117_최종-프로젝트-19일차-resilience4j-구현-성공.md
+++ b/docs/experience/sparta-spring/60-20250117_최종-프로젝트-19일차-resilience4j-구현-성공.md
@@ -1,6 +1,6 @@
 ---
 layout: note_series
-parent: SPARTA 부트캠프
+parent: SPARTA 일일 회고
 chapter: 60
 title: 20250117_최종 프로젝트 19일차 Resilience4j 구현 성공
 toc: true
