--- a/docs/experience/sparta-spring/61-20250120_최종-프로젝트-20일차-kafka-에러-핸들러와-서킷-브레이커-충돌.md
+++ b/docs/experience/sparta-spring/61-20250120_최종-프로젝트-20일차-kafka-에러-핸들러와-서킷-브레이커-충돌.md
@@ -1,6 +1,6 @@
 ---
 layout: note_series
-parent: SPARTA 부트캠프
+parent: SPARTA 일일 회고
 chapter: 61
 title: 20250120_최종 프로젝트 20일차 Kafka 에러 핸들러와 서킷 브레이커 충돌
 toc: true
