--- a/docs/experience/sparta-spring/65-20250124_최종-프로젝트-24일차-발표회-자료-피드백.md
+++ b/docs/experience/sparta-spring/65-20250124_최종-프로젝트-24일차-발표회-자료-피드백.md
@@ -1,6 +1,6 @@
 ---
 layout: note_series
-parent: SPARTA 부트캠프
+parent: SPARTA 일일 회고
 chapter: 65
 title: 20250124_최종 프로젝트 24일차 발표회 자료 피드백
 toc: true
